# logport

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  OEL511.compile  README.md
docs/: notes.md
include/: Common.h  Database.h  HttpProducer.h  InotifyWatcher.h  Inspector.h  KafkaProducer.h  LevelTriggeredEpollWatcher.h  LogPort.h  Observer.h  Platform.h  PreparedStatement.h  Producer.h  Url.h  Watch.h  httplib.hpp  json.hpp  thread_pool.hpp
kafka/: README.md  app.yml
src/: Common.cc  Database.cc  HttpProducer.cc  InotifyWatcher.cc  Inspector.cc  KafkaProducer.cc  LevelTriggeredEpollWatcher.cc  LogPort.cc  Observer.cc  Platform.cc  PreparedStatement.cc  Producer.cc  Url.cc  UrlList.cc  Watch.cc  logport_main.cc
test/: make_files.sh
